summative.moria.Moria.scala.error
Erreur de compilation :
Moria:8: error: ')' expected but 'do' found.
  do {
  ^