summative.moria.Moria.scala.code
def SortirTunnel(){
  setDirection(dir:EST)
  do{
    avance()
  } while ((!estSurBiscuit)||(!estFaceMur)
  prendBiscuit()
  retourne()
  do {
    avance()
  } while (!estSurBiscuit)
  recule()
}